fixed padding issue on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -813,6 +813,10 @@ footer i:hover {
     animation: appear 2s ease-in-out forwards;
   }
 
+  .master-work-container {
+    padding: 70px 0px;
+  }
+
   .work-container {
     background-image: linear-gradient(
       45deg,
